--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -21,7 +21,7 @@ body {
 
 /* Handle */
 .category-scrollbar::-webkit-scrollbar-thumb {
-  background: #888;
+  background: #dddddd;
   border-radius: 5px;
 }
 
