--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -22,7 +22,7 @@ body {
 
 /* Handle */
 .category-scrollbar::-webkit-scrollbar-thumb {
-  background: #3d3d3d;
+  background: rgb(55, 65, 81);
   border-radius: 5px;
 }
 
