fix spinner issue

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -30,3 +30,10 @@ body {
 .category-scrollbar::-webkit-scrollbar-thumb:hover {
   background: #555;
 }
+
+.habib-spinner {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
